Change z-index of map buttons to prevent overlapping with active modals

--- a/public_src/components/toolbar/toolbar.component.less
+++ b/public_src/components/toolbar/toolbar.component.less
@@ -24,7 +24,7 @@
   bottom: 25px;
   right: 60px;
   position: absolute;
-  z-index: 1000;
+  z-index: 401;
 }
 
 #clear-highlight {
@@ -37,7 +37,7 @@
   position: absolute;
   bottom: 5px;
   left: 150px;
-  z-index: 1000;
+  z-index: 401;
   background-color: white;
   opacity: 0.8;
   padding: 10px
@@ -47,7 +47,7 @@
   position: absolute;
   bottom: 50px;
   left: 5px;
-  z-index: 1000;
+  z-index: 401;
   background-color: white;
   opacity: 0.8;
   padding: 10px;
