--- a/public_src/styles/main.less
+++ b/public_src/styles/main.less
@@ -1,6 +1,6 @@
 .on-map {
     position: absolute;
-    z-index: 1000;
+    z-index: 401;
 }
 
 .map-button {
